--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ version '0.1-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'scala'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
